# Arpegginator

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  cleanup-preview.yml
assets/: index-1C4wIBXt.js  index-BgdL1mwO.js  index-Bm9Tcw7f.js  index-BqfBiqxc.js  index-BtLaSdHS.js  index-C-c0BbXe.js  index-CAffncvH.js  index-Ck7Fo97H.js  index-D2rrX6-5.js  index-DK3fUmkA.js  index-Dj5tcA90.js  index-degdgRTg.js  index-gMJym-_3.js
branch/refs-pull-10-merge/: index.html
branch/refs-pull-11-merge/: index.html
branch/refs-pull-12-merge/: index.html
branch/refs-pull-15-merge/: index.html
branch/refs-pull-6-merge/: index.html
branch/refs-pull-8-merge/: index.html
branch/refs-pull-9-merge/: index.html
hardware/: README.md  bom.md  button_grid.kicad_pcb  generate_pcb.py  ~button_grid.kicad_pcb.lck
hardware/button-grid/: README.md  button_grid.kicad_pcb  generate_pcb.py
hardware/capacitive-slider/: README.md  at42qt2120.rs  generate_pcb.py  slider.kicad_pcb
src/: App.tsx
src/actions/: channelActions.ts  index.ts  loopActions.ts  noteActions.ts  patternActions.ts  playbackActions.ts  scaleActions.test.ts  scaleActions.ts  viewActions.ts
src/components/: EngineToggle.tsx  Grid.tsx  GridButton.tsx  TouchStrip.tsx  Transport.styles.tsx  Transport.tsx
src/engine/: OledRenderer.ts  TeensyEngine.ts  WasmEngine.ts  midiProtocol.ts  serialProtocol.ts  types.ts
src/hooks/: useButtonGridValues.ts  useGridCommands.ts  useGridController.ts  useKeyboard.ts  useMidi.ts  useSequencer.ts
src/store/: renderStore.ts  selectors.ts  sequencerStore.ts  tickLookupCache.ts
src/types/: chords.test.ts  chords.ts  drums.ts  event.ts  grid.ts  scales.ts
src/utils/: pixelFont.ts
src/wasm/: build.sh  engine.c  engine.h  engine_core.c  engine_core.h  engine_edit.c  engine_edit.h  engine_input.c  engine_input.h  engine_platform.h  (+12 more)
src/wasm-rust/: Cargo.toml  build.rs  build.sh  watch.sh
src/wasm-rust/.cargo/: config.toml
src/wasm-rust/engine/: Cargo.toml  build.rs
src/wasm-rust/engine/src/: cell.rs  engine_core.rs  engine_drums.rs  engine_edit.rs  engine_input.rs  engine_strip.rs  engine_ui.rs  lib.rs  oled_fonts_aa.rs  oled_gfx.rs  oled_screen.rs  platform.rs  test_core.rs  test_critical.rs  test_edit.rs  test_rendered.rs  test_safety.rs
src/wasm-rust/src/: engine_core.rs  engine_edit.rs  engine_input.rs  engine_strip.rs  engine_ui.rs  lib.rs  oled_display.rs  oled_fonts.rs  oled_gfx.rs  oled_screen.rs  platform.rs  test_core.rs  test_edit.rs  test_rendered.rs
src/wasm-rust/teensy/: Cargo.toml  build_flash.sh  flash.sh
src/wasm-rust/teensy/src/: main.rs  usb_midi.rs
src/wasm-rust/wasm/: Cargo.toml
src/wasm-rust/wasm/src/: lib.rs
wasm-rust/: engine.wasm
(+31 files in other folders)
