[package]
name = "arpegginator-engine"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib for WASM builds, rlib for cargo test
# Use --crate-type flag or target-specific config
crate-type = ["rlib"]

[dependencies]

[build-dependencies]
fontdue = "0.9"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
