[package]
name = "arp3-teensy"
version = "0.1.0"
edition.workspace = true

[dependencies]
arp3-engine = { path = "../engine" }
teensy4-bsp = { version = "0.5", features = ["rt"] }
teensy4-panic = "0.2"
cortex-m = "0.7"
embedded-alloc = "0.6"
embedded-hal = "0.2"         # serial Write/Read traits for UART MIDI
nb = "1.1"                   # nb::block! for UART serial
usb-device = "0.2"           # USB device framework (matches teensy4-bsp's version)
