[package]
name = "arpegginator-engine"
version = "0.1.0"
edition.workspace = true

[lib]
# build.sh overrides to cdylib via --crate-type flag
crate-type = ["rlib"]

[features]
# Forwarded to arp3-engine. Default on (browser wants timing/flam fidelity).
# Build zero-latency wasm with `--no-default-features`.
default = ["lookahead"]
lookahead = ["arp3-engine/lookahead"]

[dependencies]
arp3-engine = { path = "../engine", default-features = false }
